corrected card height while clicked on mobile devices

--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -2,6 +2,10 @@
     height: 200px;
 }
 
+.activeCard{
+    height: 200px;
+}
+
 .header{
     position: absolute;
     z-index: 1;
